--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dummy Data Generator</title>
     <style>
-
         body {
             margin-top: 160px;
             display: flex;
@@ -15,9 +14,9 @@
             justify-content: center;
         }
 
-          h1{
-                font-size: 37px;
-            }
+        h1 {
+            font-size: 37px;
+        }
 
         button {
             width: 12vw;
@@ -27,19 +26,19 @@
             border-radius: 18px;
             font-weight: 600;
             color: #4b51aa;
+            cursor: pointer;
         }
 
         .container {
-            display: flex
-;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-bottom: 34px;
-    width: 29vw;
-    border: 2px solid black;
-    border-radius: 13px;
-    font-family: ' sans-serif';
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding-bottom: 34px;
+            width: 29vw;
+            border: 2px solid black;
+            border-radius: 13px;
+            font-family: ' sans-serif';
         }
 
         #status {
@@ -54,45 +53,45 @@
 
 
         @media (max-width:1200px) {
-          
-            button{
+
+            button {
                 width: 15vw;
             }
 
-            #status{
+            #status {
                 width: 18vw;
             }
 
-            .container{
-                    width: 32vw;
+            .container {
+                width: 32vw;
             }
         }
 
-         @media (max-width:950px) {
-            button{
+        @media (max-width:950px) {
+            button {
                 width: 33vw;
             }
 
-            #status{
+            #status {
                 width: 36vw;
             }
 
-            .container{
+            .container {
                 width: 57vw;
             }
         }
 
-         @media (max-width:500px) {
-            button{
-               width: 48vw;
-         
+        @media (max-width:500px) {
+            button {
+                width: 48vw;
+
             }
 
-            #status{
+            #status {
                 width: 56vw;
             }
 
-            .container{
+            .container {
                 width: 95%;
             }
         }
@@ -110,7 +109,7 @@
     </div>
     <script>
         document.querySelector("#Generate-btn").addEventListener("click", async () => {
-            let res = await fetch("http://localhost:3000/g/")
+            let res = await fetch("http://172.16.2.38:3000/g/")
             let data = await res.json()
             document.querySelector("#status").innerHTML = `Generated Data is :<br>Name: ${data.name}<br> Salary: ${data.salary}<br> City: ${data.city}<br> Language: ${data.language}<br> isManager: ${data.isManager}`;
             document.getElementById("status").style.border = "2px solid black"
