--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
     <script>
         document.querySelector("#Generate-btn").addEventListener("click", async () => {
-            let res = await fetch("http://172.16.2.38:3000/g/",{method:"POST"})
+            let res = await fetch("http://172.16.2.38:3000/g")
             let data = await res.json()
             document.querySelector("#status").innerHTML = `Generated Data is :<br>Name: ${data.name}<br> Salary: ${data.salary}<br> City: ${data.city}<br> Language: ${data.language}<br> isManager: ${data.isManager}`;
             document.getElementById("status").style.border = "2px solid black"
