--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
     <script>
         document.querySelector("#Generate-btn").addEventListener("click", async () => {
-            let res = await fetch("http://localhost:3000/g",{method:"POST"})
+            let res = await fetch("http://172.16.2.38:3000/g",{method:"POST"})
             let data = await res.json()
             let html="Generated data is:<br>"
             data.forEach(item => {
